# EDP-IO

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  CI_CD_FIX_GUIDE.md  CODE_FORMATTING_RESOLUTION.md  DESIGN_PATTERNS.md  GIT_ANALYSIS_REPORT.md  GIT_STATUS_SUMMARY.md  JAVA_API.md  JAVA_API_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup_dev.sh
.github/workflows/: ci.yml  dbt-daily.yml  format.yml
app/: main.py
app/pages/: 1_pipeline_status.py  2_data_quality.py  3_lineage.py  4_ask_architect.py  5_llm_observability.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: scd2.sql
dbt_project/models/gold/: dim_customer.sql  dim_date.sql  dim_product.sql  fact_sales.sql  schema.yml
dbt_project/models/silver/: schema.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
docs/exports/: README.html  implementation_plan.html  task.html  walkthrough.html
edp-io-api/: .gitignore  API_SPECIFICATION.md  QUICKSTART.md  README.md  pom.xml
edp-io-api/src/main/java/com/edpio/api/: EdpIoApiApplication.java
edp-io-api/src/main/java/com/edpio/api/config/: WebConfig.java
edp-io-api/src/main/java/com/edpio/api/controller/: ChatController.java  DataQualityController.java  MetricsController.java  ObservabilityController.java  PipelineController.java
edp-io-api/src/main/java/com/edpio/api/model/: Alert.java  ChatMessage.java  DataQualityMetrics.java  MetricsResponse.java  PipelineStatus.java  SchemaDrift.java
edp-io-api/src/main/java/com/edpio/api/provider/: DatabricksProvider.java  KeyVaultProvider.java  LLMProvider.java
edp-io-api/src/main/java/com/edpio/api/service/: ChatService.java  DataQualityService.java  MetricsService.java  ObservabilityService.java  PipelineService.java
edp-io-api/src/main/resources/: application.properties
infra/terraform/: main.tf
infra/terraform/environments/: dev.tfvars  prod.tfvars
scripts/: export_to_html.py
src/ingestion/: __init__.py  bronze_writer.py  mock_data.py  oracle_ingest.py  sqlserver_ingest.py
src/ingestion/data_contracts/: contracts.yaml
src/observability/: __init__.py  doc_generator.py  llm_metrics.py  log_analyzer.py  rag_context.py  schema_drift.py
src/orchestrator/: __init__.py  dag_daily.py
src/providers/: __init__.py  compute.py  llm.py  serverless.py  storage.py
src/utils/: __init__.py  config.py  logging.py  security.py
tests/: conftest.py  test_ingestion.py  test_observability.py  test_security.py
